# do not edit -- automatically generated by arch changelog
# arch-tag: automatic-ChangeLog--jdavid@itaapy.com--public/itools--main--0.9
#

2005-05-28 12:53:49 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-61

    Summary:
      merge from the 0.8 branch
    Revision:
      itools--main--0.9--patch-61

    Patches applied:
    
     * jdavid@itaapy.com--public/itools--main--0.8--patch-95
       get ready to release 0.8.1
    
     * jdavid@itaapy.com--public/itools--main--0.8--patch-96
       catalog, fix profile and bench script
    
     * jdavid@itaapy.com--public/itools--main--0.8--patch-97
       xhtml, improve "to_text" performance for big documents
    

    modified files:
     CHANGES.txt Changelog catalog/prof.py setup.py xhtml/XHTML.py

    new patches:
     jdavid@itaapy.com--public/itools--main--0.8--patch-95
     jdavid@itaapy.com--public/itools--main--0.8--patch-96
     jdavid@itaapy.com--public/itools--main--0.8--patch-97


2005-05-27 14:28:05 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-60

    Summary:
      handlers, split new class Node from Handler
    Revision:
      itools--main--0.9--patch-60

    Start to separate the category "handler as a logical representation of
    a resource" from "handler as a node in the handler tree".
    
    For now the implementation change has been to split the "handler tree"
    logic from the Handler class into a new class named "Node". This is a
    base class and Handler inherits from it.
    
    This change allows, for example, to traverse files. The CSV handler
    has been modified to illustrate this new ability, now it is possible
    to do "csv_handler.get_handler('5')" to get a "handler" for the fifth
    row of the CSV file.

    modified files:
     Changelog handlers/CSV.py handlers/File.py handlers/Handler.py


2005-05-24 16:56:05 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-59

    Summary:
      merge http resources fix from the 0.8 branch
    Revision:
      itools--main--0.9--patch-59
