@@ -2,6 +2,18 @@
 # arch-tag: automatic-ChangeLog--jdavid@itaapy.com--public/itools--main--0.9
 #
 
+2005-05-28 17:55:24 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-62
+
+    Summary:
+      catalog, fix profiling script
+    Revision:
+      itools--main--0.9--patch-62
+
+
+    modified files:
+     Changelog catalog/prof.py
+
+
 2005-05-28 12:53:49 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-61
 
     Summary:
